shellclear/src/snapshots/shellclear__masker__test_masker__remove_already_masked_detection.snap
---
source: shellclear/src/masker.rs
assertion_line: 123
expression: commands
---
[
    Command {
        shell_type: Zshrc,
        detections: [],
        command: "export MA*****",
        data: "export MA*****",
        secrets: [
            "MASK_ME",
        ],
    },
]
